new file:   css/calendars.css 	new file:   css/events.css 	modified:   css/index.css 	modified:   css/style.css 	modified:   events.html 	modified:   index.html 	new file:   march.html

--- a/events.html
+++ b/events.html
@@ -4,41 +4,71 @@ February 5, 2021
 -->
 
 <html>
-	<head>
-		<title>Euphoria</title>
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/index.css">
 
-		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<!--TOP BAR-->
-		<div class="topbar">
-			<div class="topbar-left">
-				<i class="far fa-envelope"></i> <a href="#">band@email.com</a>
-			</div>
-			<div class="topbar-right">
-				<div class="social">
-					<a href=""><i class="fab fa-twitter-square"></i></a>
-					<a href=""><i class="fab fa-facebook-square"></i></a>
-					<a href=""><i class="fab fa-linkedin"></i></a>
-					<a href=""><i class="fab fa-instagram"></i></a>
-					<a href=""><i class="fab fa-youtube-square"></i></a>
-				</div>
+<head>
+	<title>Euphoria</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/events.css">
+
+	<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+	<!--TOP BAR-->
+	<div class="topbar">
+		<div class="topbar-left">
+			<i class="far fa-envelope"></i> <a href="#">band@email.com</a>
+		</div>
+		<div class="topbar-right">
+			<div class="social">
+				<a href=""><i class="fab fa-twitter-square"></i></a>
+				<a href=""><i class="fab fa-facebook-square"></i></a>
+				<a href=""><i class="fab fa-linkedin"></i></a>
+				<a href=""><i class="fab fa-instagram"></i></a>
+				<a href=""><i class="fab fa-youtube-square"></i></a>
 			</div>
 		</div>
-		<!--TOP BAR END-->
+	</div>
+	<!--TOP BAR END-->
 
-		<!--NAV BAR-->
-		<div class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="events.html">Events</a></li>
-				<li><a href="members.html">Members</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-        <!--NAV BAR END-->
-    
-    </body>
+	<!--NAV BAR-->
+	<div class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li class="active"><a href="events.html">Events</a></li>
+			<li><a href="members.html">Members</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</div>
+	<!--NAV BAR END-->
+
+	<!--HEADING-->
+	<div class="pageheader">
+		<h1>Come See Us Play</h1>
+	</div>
+	<!--HEADING END-->
+
+	<!--SIDEBAR-->
+	<div class="sidebar">
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+		<h1>Book a gig</h1>
+	</div>
+	<!--SIDEBAR END-->
+
+	<!--MAIN-->
+	<div class="main">
+		<h1> calendar</h1>
+	</div>
+	<!--MAIN END-->
+
+</body>
+
 </html>
