--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ February 5, 2021
 		<!--HEADING-->
 		<div class="pageheader">
 			<img src="img/placeholder.png">
-			<h1> EUPHORIA</h1>
-
+			<div class="center"> <h1>EUPHORIA</h1> </div>
 		</div>
 		<!--HEADING END-->
+		
 	</body>
 </html>
