new file:   calendars/calendars.css 	renamed:    march.html -> calendars/march.html 	deleted:    css/calendars.css 	modified:   css/events.css 	modified:   events.html

--- a/calendars/march.html
+++ b/calendars/march.html
@@ -6,19 +6,20 @@ February 5, 2021
 <html>
 
     <head>
-        <link rel="stylesheet" href="css/calendars.css"
+        <link rel="stylesheet" href="calendars.css"
     </head>
 
     <body>
+        <h1> Month / Year</h1>
         <table>
             <tr>
-                <th>Sunday</th>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-                <th>Saturday</th>
+                <th style="width: 14.25%;height: 50px;">Sunday</th>
+                <th style="width: 14.25%;height: 50px;">Monday</th>
+                <th style="width: 14.25%;height: 50px;">Tuesday</th>
+                <th style="width: 14.25%;height: 50px;">Wednesday</th>
+                <th style="width: 14.25%;height: 50px;">Thursday</th>
+                <th style="width: 14.25%;height: 50px;">Friday</th>
+                <th style="width: 14.25%;height: 50px;">Saturday</th>
             </tr>
 
             <tr>
