modified:   calendars/calendars.css 	modified:   calendars/march.html 	new file:   calendars/template.html 	modified:   contact.html 	new file:   css/contact.css 	modified:   css/events.css 	modified:   css/index.css 	new file:   css/members.css 	modified:   css/style.css 	modified:   events.html 	modified:   img/four1.jpg 	modified:   img/live-four.jpg 	new file:   img/livee.jpg 	modified:   index.html 	modified:   members.html

--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,22 @@ February 5, 2021
 <html>
 	<head>
 		<title>Euphoria</title>
+		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/contact.css">
+		<!-- FONTS -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
+		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
 	</head>
+
 	<body>
 		<!--TOP BAR-->
 		<div class="topbar">
 			<div class="topbar-left">
-				<i class="far fa-envelope"></i> <a href="#">band@email.com</a>
+				<i class="fa fa-chevron-left" aria-hidden="true"></i> <a href="index.html"> &nbsp Return Home </a>
 			</div>
 			<div class="topbar-right">
 				<div class="social">
@@ -28,17 +34,16 @@ February 5, 2021
 			</div>
 		</div>
 		<!--TOP BAR END-->
-
+	
 		<!--NAV BAR-->
 		<div class="navbar">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="events.html">Events</a></li>
+				<li class="active"><a href="events.html">Events</a></li>
 				<li><a href="members.html">Members</a></li>
-				<li class="active"><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-        <!--NAV BAR END-->
+		<!--NAV BAR END-->
     
     </body>
 </html>
