--- a/events.html
+++ b/events.html
@@ -6,49 +6,88 @@ February 5, 2021
 <html>
 
 <head>
-	<title>Euphoria</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/events.css">
+	<head>
+		<title>Euphoria</title>
+		<!-- CSS -->
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/events.css">
+		<!-- FONTS -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
-	<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
-</head>
+		<!-- ICONS -->
+		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
+	</head>
 
-<body>
-	<!--TOP BAR-->
-	<div class="topbar">
-		<div class="topbar-left">
-			<i class="far fa-envelope"></i> <a href="#">band@email.com</a>
-		</div>
-		<div class="topbar-right">
-			<div class="social">
-				<a href=""><i class="fab fa-twitter-square"></i></a>
-				<a href=""><i class="fab fa-facebook-square"></i></a>
-				<a href=""><i class="fab fa-linkedin"></i></a>
-				<a href=""><i class="fab fa-instagram"></i></a>
-				<a href=""><i class="fab fa-youtube-square"></i></a>
+	<body>
+		<!--TOP BAR-->
+		<div class="topbar">
+			<div class="topbar-left">
+				<i class="fa fa-chevron-left" aria-hidden="true"></i> <a href="index.html"> &nbsp Return Home </a>
+			</div>
+			<div class="topbar-right">
+				<div class="social">
+					<a href=""><i class="fab fa-twitter-square"></i></a>
+					<a href=""><i class="fab fa-facebook-square"></i></a>
+					<a href=""><i class="fab fa-linkedin"></i></a>
+					<a href=""><i class="fab fa-instagram"></i></a>
+					<a href=""><i class="fab fa-youtube-square"></i></a>
+				</div>
 			</div>
 		</div>
-	</div>
-	<!--TOP BAR END-->
+		<!--TOP BAR END-->
 
-	<!--NAV BAR-->
-	<div class="navbar">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li class="active"><a href="events.html">Events</a></li>
-			<li><a href="members.html">Members</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
-	<!--NAV BAR END-->
+		<!--NAV BAR-->
+		<div class="navbar">
+			<ul>
+				<li class="active"><a href="events.html">Events</a></li>
+				<li><a href="members.html">Members</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<!--NAV BAR END-->
 
-	<!--HEADING-->
-	<div class="pageheader">
-		<h1>Come See Us Play</h1>
-	</div>
-	<!--HEADING END-->
+		<!--HEADING-->
+		<div class="backimg">
+			<div class="words">
+				<br>
+				<br>
+				<div class="spacing">
+					Come<br>
+					See<br>
+					Us<br>
+					Play<br>
+				</div>
+			</div>
+			<img src="img/livee.jpg">
+		</div>
+		
+		<!--HEADING END-->
 
-	<!--SIDEBAR-->
+		<!-- CONTENT START -->
+			<div class="block">
+				<h1>Upcoming Events</h1>
+
+				<div class="calendar">
+					<iframe  id="calendar" src="calendars/march.html" title="Calendar" style="border:none;">
+				</div>
+				
+				<div class="booking">
+					<h2>Booking Information</h2>
+				</div>
+
+			</div>
+
+
+		<!-- CONTENT END -->
+
+
+
+
+
+
+
+	<!--SIDEBAR
 	<div class="sidebar">
 		<h1>Book a gig</h1>
 		<h1>Book a gig</h1>
@@ -61,16 +100,16 @@ February 5, 2021
 		<h1>Book a gig</h1>
 		<h1>Book a gig</h1>
 	</div>
-	<!--SIDEBAR END-->
+	SIDEBAR END-->
 
-	<!--MAIN-->
+	<!--MAIN
 	<div class="main">
 		<h1> calendar</h1>
 		<div class="calendar">
 			<iframe  id="calendar" src="calendars/march.html" title="Calendar" style="border:none;">
 		</div>
 	</div>
-	<!--MAIN END-->
+	MAIN END-->
 
 </body>
 
