--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@ February 5, 2021
 <html>
 	<head>
 		<title>Euphoria</title>
+		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/index.css">
+		<!-- FONTS -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
+		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
@@ -32,17 +37,18 @@ February 5, 2021
 		<!--NAV BAR-->
 		<div class="navbar">
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="members.html">Members</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<!--NAV BAR END-->
-
+		
 		<!--HEADING-->
 		<div class="pageheader">
-			<img src="img/placeholder.png">
+			<div class="backimg">
+				<img src="img/live-four.jpg">
+			</div>
 			<div class="center"> <h1>EUPHORIA</h1> </div>
 		</div>
 		<!--HEADING END-->
