--- a/members.html
+++ b/members.html
@@ -6,16 +6,22 @@ February 5, 2021
 <html>
 	<head>
 		<title>Euphoria</title>
+		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/members.css">
+		<!-- FONTS -->
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
+		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
 	</head>
+
 	<body>
 		<!--TOP BAR-->
 		<div class="topbar">
 			<div class="topbar-left">
-				<i class="far fa-envelope"></i> <a href="#">band@email.com</a>
+				<i class="fa fa-chevron-left" aria-hidden="true"></i> <a href="index.html"> &nbsp Return Home </a>
 			</div>
 			<div class="topbar-right">
 				<div class="social">
@@ -28,17 +34,83 @@ February 5, 2021
 			</div>
 		</div>
 		<!--TOP BAR END-->
-
+	
 		<!--NAV BAR-->
 		<div class="navbar">
 			<ul>
-				<li><a href="index.html">Home</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li class="active"><a href="members.html">Members</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-        <!--NAV BAR END-->
+		<!--NAV BAR END-->
+
+		<!-- CONTENT START -->
+		<div class="intro">
+			<img src="img/four1.jpg">
+			
+			<div class="text">
+				<span style="background: rgba(193, 87, 59, 0.4);">MEET</span><br>
+				<span style="background: rgba(193, 87, 59, 0.4);">THE</span><br>
+				<span style="background: rgba(193, 87, 59, 0.4);">BAND</span><br>
+				<i class="fa fa-chevron-down" aria-hidden="true"></i>
+			</div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<div class="kendrick">
+			<div class="details-left">
+				<div class="name">
+					<h1>Kendrick Bearpaw</h1>
+					<h3>(Queen Weezal)</h3>
+				</div>
+			</div>
+			<div class="details-right">
+				<h2>Lead Vocalist/Guitarist</h2>
+				<img src="img/self-kendrick2.jpg" height="400">
+			</div>
+		</div>
+		<hr>
+		<div class="simon">
+			<div class="details-left">
+				<div class="name">
+					<h1>Simon Wacker</h1>
+					<h3>(The Wackman)</h3>
+				</div>
+			</div>
+			<div class="details-right">
+				<h2>Bassist</h2>
+				<img src="img/self-simon4.jpg" height="400">
+			</div>
+		</div>
+		<hr>
+		<div class="kendrick">
+			<div class="details-left">
+				<div class="name">
+					<h1>Koda LastName</h1>
+					<h3>(Short Scale)</h3>
+				</div>
+			</div>
+			<div class="details-right">
+				<h2>Guitarist</h2>
+				<img src="img/self-koda.jpg" height="400">
+			</div>
+		</div>
+		<hr>
+		<div class="kendrick">
+			<div class="details-left">
+				<div class="name">
+					<h1>Reed LastName</h1>
+					<h3>(???)</h3>
+				</div>
+			</div>
+			<div class="details-right">
+				<h2>Drummer</h2>
+				<img src="img/self-koda.jpg" height="400">
+			</div>
+		</div>
+		<!-- CONTENT END -->
     
     </body>
 </html>
