modified:   contact.html 	modified:   css/contact.css 	modified:   css/index.css 	modified:   css/members.css 	new file:   img/live-two-7.jpg 	modified:   index.html 	new file:   main.js 	modified:   members.html

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,16 @@ February 5, 2021
 			</ul>
 		</div>
 		<!--NAV BAR END-->
-    
+		<div class="bandcontact">
+			<div class="information">
+				<h1>Contact Us</h1>
+				<i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp St. Charles, MO<br>
+				<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp (###) ### - ####<br>
+				<i class="fa fa-envelope-open-o" aria-hidden="true"></i> &nbsp bandemail@email.com<br>
+				<i class="fa fa-address-card-o" aria-hidden="true"></i> &nbsp Address for mail if you want??<br>
+			</div>
+			<img src="img/model-day1.jpg">
+		</div>
+
     </body>
 </html>
