--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ February 5, 2021
 		<link rel="stylesheet" href="css/index.css">
 		<!-- FONTS -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
+		<link href="https://fonts.googleapis.com/css2?family=Allura&family=Handlee&family=Montserrat:wght@300&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+		
+		
 		<!-- ICONS -->
 		<script src="https://kit.fontawesome.com/a5788e96cb.js" crossorigin="anonymous"></script>
 	</head>
@@ -49,7 +50,10 @@ February 5, 2021
 			<div class="backimg">
 				<img src="img/live-four.jpg">
 			</div>
-			<div class="center"> <h1>EUPHORIA</h1> </div>
+			<div class="center"> 
+				<h1>EUPHORIA</h1> 
+				<p><span style="font-family: 'Handlee', cursive;">STL</span> local band</p>
+			</div>
 		</div>
 		<!--HEADING END-->
 		
