modified:   contact.html 	modified:   css/contact.css 	modified:   css/events.css

--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,10 @@ February 5, 2021
 			</div>
 			<div class="topbar-right">
 				<div class="social">
-					<a href=""><i class="fab fa-twitter-square"></i></a>
-					<a href=""><i class="fab fa-facebook-square"></i></a>
-					<a href=""><i class="fab fa-linkedin"></i></a>
-					<a href=""><i class="fab fa-instagram"></i></a>
-					<a href=""><i class="fab fa-youtube-square"></i></a>
+					<a href="#"><i class="fab fa-twitter-square"></i></a>
+					<a href="#"><i class="fab fa-facebook-square"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-youtube-square"></i></a>
 				</div>
 			</div>
 		</div>
@@ -44,15 +43,55 @@ February 5, 2021
 			</ul>
 		</div>
 		<!--NAV BAR END-->
+		<div class="backdrop">
+			<img src="img/live-two-3.jpg">
+		</div>
+
+
+
+
+
+
+
+
+
+
 		<div class="bandcontact">
 			<div class="information">
-				<h1>Contact Us</h1>
+				<h1>Contact Euphoria</h1>
 				<i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp St. Charles, MO<br>
 				<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp (###) ### - ####<br>
 				<i class="fa fa-envelope-open-o" aria-hidden="true"></i> &nbsp bandemail@email.com<br>
 				<i class="fa fa-address-card-o" aria-hidden="true"></i> &nbsp Address for mail if you want??<br>
+			
+				<div class="socials">
+					<a href="#"><i class="fab fa-twitter-square"></i></a>
+					<a href="#"><i class="fab fa-facebook-square"></i></a>
+					<a href="#"><i class="fab fa-instagram"></i></a>
+					<a href="#"><i class="fab fa-youtube-square"></i></a>
+				</div>
 			</div>
-			<img src="img/model-day1.jpg">
+			<div class="confor">
+				<form>
+					<label for="first">First Name</label>
+					<input type="text" name="first" id="first" required>
+					&nbsp &nbsp
+					<label for="last">Last Name</label>
+					<input type="text" name="last" id="last" required><br>
+
+					<label for="phone">Phone</label>
+					<input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="###-###-####" required>
+
+					<label for="email">Email Address</label>
+					<input type="text" id="emial" name="email" required><br>
+
+					<label for="types">How would you like us to reach you?</label><br>
+					<input type="checkbox" id="text" name="text" value="TXT">
+					<label for="text">Text Mobile Number Above</label><br>
+					<input type="checkbox" id="email" name="email" value="EMAIL">
+					<label for="text">Email Address Above</label>
+				</form>
+			</div>
 		</div>
 
     </body>
