modified:   contact.html 	modified:   css/index.css 	modified:   css/style.css 	new file:   css/styleb.css 	modified:   events.html 	modified:   index.html 	modified:   members.html

--- a/members.html
+++ b/members.html
@@ -6,6 +6,7 @@ February 5, 2021
 <html>
 	<head>
 		<title>Euphoria</title>
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/members.css">
