--- a/events.html
+++ b/events.html
@@ -8,6 +8,7 @@ February 5, 2021
 <head>
 	<head>
 		<title>Euphoria</title>
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/events.css">
