--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ February 5, 2021
 <html>
 	<head>
 		<title>Euphoria</title>
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/index.css" media="all">
+		<link rel="stylesheet" href="css/style.css" media="all">
 		<!-- FONTS -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Allura&family=Handlee&family=Montserrat:wght@300&family=Nunito:wght@200&family=Open+Sans:wght@300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
