renamed:    css/style.css -> 0style.css 	renamed:    css/contact.css -> contact.css 	modified:   contact.html 	deleted:    css/events.css 	deleted:    css/index.css 	deleted:    css/indexx.css 	deleted:    css/members.css 	new file:   events.css 	modified:   events.html 	new file:   img/blogo.png 	modified:   img/live-two-7.jpg 	new file:   index.css 	modified:   index.html 	new file:   members.css 	modified:   members.html 	new file:   style.css

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ February 5, 2021
 		<title>Euphoria</title>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="css/contact.css">
 		<!-- FONTS -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,6 +43,21 @@ February 5, 2021
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
+		
+        <div class="mobilemenu">
+            <div class="topnav">
+                <a href="#home" class="active">N</a>
+                <div id="myLinks">
+                    <a href="index.html">Home</a>
+                    <a href="events.html">Events</a>
+                    <a href="members.html">Members</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </div>
 		<!--NAV BAR END-->
 		<div class="backdrop">
 			<img src="img/live-two-3.jpg">
