modified:   members.html

--- a/members.html
+++ b/members.html
@@ -86,7 +86,9 @@ February 5, 2021
 					</div>
 					<div class="right">
 						<p>
-							BIO
+							Co-Founder of Euphoria <br>
+							Member Since: I dunno <br>
+							Bio: 
 						</p>
 					</div>
 				</div>
