--- a/members.html
+++ b/members.html
@@ -115,7 +115,7 @@ February 5, 2021
 			</div>        
 		</div>
 		<!--KODA-->
-		<button type="button" class="collapsible"><span style="font-weight: strong; font-size: 2vw;">Koda Something</span> <br> Guitarist </button>
+		<button type="button" class="collapsible"><span style="font-weight: strong; font-size: 2vw;">Koda Trujillo</span> <br> Guitarist </button>
 			<div class="inside">
 				<div class="kendrick">
 					<div class="left">
@@ -135,7 +135,7 @@ February 5, 2021
 			</div>        
 		</div>
 		<!--REED-->
-		<button type="button" class="collapsible"><span style="font-weight: strong; font-size: 2vw;">Reed Something</span> <br>Drummer</button>
+		<button type="button" class="collapsible"><span style="font-weight: strong; font-size: 2vw;">Reed Hoerner</span> <br>Drummer</button>
 			<div class="inside">
 				<div class="kendrick">
 					<div class="left">
